--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "react-stripe-elements": "^2.0.3"
+    "react-stripe-elements": "^2.0.3",
+    "stripe": "^6.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
